# PythonPackage

./: README.md  build.ps1  main.py  pip.ini  pyproject.toml  setup.py
example/: egg.py
hello_mdelgert/: demo.py  demo2.py  hello.py
src/example1/: __init__.py
src/example2/: __init__.py  dev.py
src/example_package_mdelgert/: example.py  test.py
tests/: _example.py  _test.py  conftest.py  test.py
