[project]
name = "example_package_mdelgert"
version = "0.0.4"
authors = [
  { name="Matthew Elgert", email="mdelgert@yahoo.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mdelgert/PythonPackage"
"Bug Tracker" = "https://github.com/mdelgert/PythonPackage/issues"