[project]
name = "example_package_mdelgert"
version = "0.0.34"
authors = [
  { name="Matthew Elgert", email="mdelgert@yahoo.com" },
]
description = "Example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mdelgert/PythonPackage"
"Bug Tracker" = "https://github.com/mdelgert/PythonPackage/issues"

#https://packaging.python.org/en/latest/specifications/entry-points/
#https://setuptools.pypa.io/en/latest/userguide/entry_point.html
#https://amir.rachum.com/python-entry-points/

[project.scripts]
#helloworld = "example1:hello_world"
demo = "example2:hello_demo"

#[console_scripts]
#test = example_mdelgert:test